# lada

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/LaDa/: __init__.py
src/LaDa/parsers/: __init__.py  data_parser.py  dump_parser.py  log_parser.py
src/lada/: __init__.py
src/lada/analysis/: __init__.py  calculations.py
src/lada/modifiers/: __init__.py  data_modifier.py
src/lada/parsers/: __init__.py  data_parser.py  dump_parser.py
tests/data/: README.md  sample.data  sample_acf.txt  sample_dump.dump  sample_log.lammps
tests/test_analysis/: test_calculations.py
tests/test_parsers/: test_data_parsers.py  test_dump_parsers.py  test_log_parsers.py
