[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lada"
version = "1.0.0"
authors = [
  { name="Balint Magyari", email="balint.magyari@unina.it" },
]
description = "LAMMPS Data Analysis library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

# Testing tools, not required to be installed for regular users
[project.optional-dependencies]
dev = [
    "pytest",
    "icecream"
]

[project.urls]
Homepage = "https://github.com/balintmagyari/LAMMPS-Data-Analysis"