[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lada"
version = "1.0.6"
authors = [
  { name="Balint Magyari", email="balint.magyari@unina.it" },
]
description = "LAMMPS Data Access library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy~=2.4.2",
  "pandas~=3.0.1",
  "tqdm~=4.67.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

# Testing tools, not required to be installed for regular users
[project.optional-dependencies]
dev = [
    "pytest",
    "icecream"
]

[project.urls]
Homepage = "https://github.com/balintmagyari/lada"